Pull data from database connection instead of hard code.  Pulled changes from step IV to incorporate patients_foods, struggling to get foods to pull data properly, why is it providing data as a tuple instead of dict? at this time, patients, dialysis_forms are successfully pulling data from db

--- a/Step III/templates/base.html
+++ b/Step III/templates/base.html
@@ -26,6 +26,7 @@
               <a class="nav-link" href="{{ url_for('foods_view') }}">Foods</a>
               <a class="nav-link" href="{{ url_for('labs_view') }}">Lab Results</a>
               <a class="nav-link" href="{{ url_for('dialysis_forms_view') }}">Dialysis Forms</a>
+              <a class="nav-link" href="{{ url_for('patients_foods_view') }}">Patients Food</a>
             </div>
           </div>
         </div>
