--- a/Step III/templates/foods.html
+++ b/Step III/templates/foods.html
@@ -4,26 +4,30 @@
 {% block content%}
 
 <h4> Foods Table </h4>
+<!--
 <div class="input-group">
     <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
     <button type="button" class="btn btn-outline-primary">search</button>
   </div>
-    <table class="table">
-        <tr class="table__header">
-            {% for header in foods_headings %}
-            <th class="table__cell">{{ header }}</th>
-            {% endfor%}
-        </tr>
-            {% for row in foods_data %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{ cell }}</td>
-                {% endfor %}
-                <td><button type="submit" name="edit" value="{{ row[0] }}">Edit</button>
-                <td><button type="submit" name="delete" value="{{ row[0] }}">Delete</button>      
-            </tr>
+-->
+  <table class="table">
+    <tr class="table__header">
+        {% for key in foods[0].keys() %}
+        <th>{{ key }}</th>
+        {% endfor %}
+    </tr>
+    <tbody>
+        {% for food in foods %}
+        <tr>
+            {% for key in foods.keys() %}
+            <td>{{food[key]}}</td>
             {% endfor %}
-    </table>
+            <td><button type="submit" name="edit" >Edit</button></td>
+            <td><button type="submit" name="delete">Delete</button></td>  
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
     <hr>
     <h4> Add New Food </h4>
     <div class="col-lg-7 offset-lg-2 my-5">
@@ -46,7 +50,9 @@
             <input class="btn-primary form-control" type="submit" value="Submit">
         </form>
     </div>
-{% endblock%}
+
 
 <input id="row_id" name="row_id" type="hidden" value="{{ row[0] }}">
                 <td><button type="submit" value="{{ row[] }}">Delete</button>
+
+{% endblock %}
