--- a/Step III/templates/patients.html
+++ b/Step III/templates/patients.html
@@ -6,27 +6,22 @@
 <h4> Patients Table </h4>
 <table>
     <thead>
-    <tr>
-        <!-- Iterate through each key in the first entry to get the
-        column name -->
-        {% for key in patients[0].keys() %}
-    
-        <!-- Create a <th> tag with the key inside of it, this will be
-        our header row -->
-        <th>{{ key }}</th>
-    
-        <!-- End of this for loop -->
-        {% endfor %}
-    </tr>
+        <tr>
+
+            {% for key in patients[0].keys() %}
+        
+            <th>{{ key }}</th>
+
+            {% endfor %}
+        </tr>
+    </thead>
     <tbody>
     
-    <!-- Now, iterate through every person in bsg_people -->
         {% for person in patients %}
         <tr>
-            <!-- Then iterate through every key in the current person dictionary -->
+
             {% for key in person.keys() %}
-        
-            <!-- Create a <td> element with the value of that key in it -->
+
             <td>{{person[key]}}</td>
             {% endfor %}
             <td><button type="submit" name="edit" >Edit</button></td>
@@ -35,22 +30,6 @@
         {% endfor %}
     </tbody>
 </table>
-    <!-- <table class="table">
-        <tr class="table__header">
-            {% for header in patients_headings %}
-            <th class="table__cell">{{ header }}</th>
-            {% endfor%}
-        </tr>
-            {% for row in patients_data %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{ cell }}</td>
-                {% endfor %}
-                <td><button type="submit" name="edit" value="{{ row[0] }}">Edit</button>
-                <td><button type="submit" name="delete" value="{{ row[0] }}">Delete</button>      
-            </tr>
-            {% endfor %}
-    </table> -->
     <hr>
     <h4> Add New Patient </h4>
     <div class="col-lg-7 offset-lg-2 my-5">
