--- a/Step III/templates/patients.html
+++ b/Step III/templates/patients.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %} Patients {% endblock %}
 
 {% block content%}
@@ -30,7 +31,11 @@
         {% endfor %}
     </tbody>
 </table>
-    <hr>
+{{ wtf.quick_form(form) }}
+{% endblock%}
+
+<!--
+        <hr>
     <h4> Add New Patient </h4>
     <div class="col-lg-7 offset-lg-2 my-5">
         <form>
@@ -52,4 +57,4 @@
             <input class="btn-primary form-control" type="submit" value="Submit">
         </form>
     </div>
-{% endblock%}
+-->
