functional crud operations for patients.  Added a separate page for editing patients.  Still need to create input validation, form population, error handling.  Caught a few small errors in the Ddata manipulations file

--- a/Step III/templates/patients.html
+++ b/Step III/templates/patients.html
@@ -25,8 +25,11 @@
 
             <td>{{person[key]}}</td>
             {% endfor %}
-            <td><button type="submit" name="edit" >Edit</button></td>
-            <td><button type="submit" name="delete">Delete</button></td>  
+            <td><a href="update_patient"><button type="submit" name="edit" >Edit</button></a></td>
+            <!-- <td><a href = "delete_patient/{{person.patient_id}}">
+                <button type="button" name="delete">Delete</button></td>  
+            </a> -->
+            <td><a href="delete_patient/{{person.patient_id}}" class="btn btn-danger">Delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
@@ -40,6 +43,8 @@
     <div>{{ form.weight.label}} : {{form.weight() }}</div>
     {{form.submit()}}
 </form>
+
+
 {% endblock%}
 
 <!--
