--- a/Step III/templates/lab_results.html
+++ b/Step III/templates/lab_results.html
@@ -44,4 +44,17 @@
             <input class="btn-primary form-control" type="submit" value="Submit">
         </form>
     </div>
+
+    
+<form method = "POST" action ="/lab_results">
+    <div>{{form.phos_lab.label}} : {{ form.phos_lab() }}</div>
+    <div>{{form.pot_lab.label}} : {{ form.pot_lab() }} </div>
+    <div>{{form.sod_lab.label}} : {{ form.sod_lab() }} </div>
+    <div>{{form.dial_lab.label}} : {{form.dial_lab() }}</div>
+    <div>{{form.lab_time.label}} : {{form.lab_time() }}</div>   
+    <div>{{ form.pat_id.label}} : {{form.pat_id() }}</div>    <!-- how to make this a drop down? preferably by patient name-->
+    <div>{{form.dial_id.label}} : {{form.dial_id() }}</div> 
+    {{form.submit()}}
+</form>
 {% endblock %}
+
