--- a/Step III “/templates/foods.html
+++ b/Step III “/templates/foods.html
@@ -10,20 +10,20 @@
   </div>
     <table class="table">
         <tr class="table__header">
-            {% for header in foods_headings %}
-            <th class="table__cell">{{ header }}</th>
-            {% endfor%}
-        </tr>
-            {% for row in foods_data %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{ cell }}</td>
-                {% endfor %}
-                <td><button type="submit" name="edit" value="{{ row[0] }}">Edit</button>
-                <td><button type="submit" name="delete" value="{{ row[0] }}">Delete</button>      
-            </tr>
+            {% for key in foods[0].keys() %}
+            <th>{{ key }}</th>
             {% endfor %}
+        </tr>
+        <tbody>
+            {% for food in foods %}
+            <tr>
+                {% for key in foods.keys() %}
+                <td>{{food[key]}}</td>
+                {% endfor %}
+            </tr>
+        </tbody>
     </table>
+    
     <hr>
     <h4> Add New Food </h4>
     <div class="col-lg-7 offset-lg-2 my-5">
