--- a/Step IV “/templates/lab_results.html
+++ b/Step IV “/templates/lab_results.html
@@ -6,17 +6,21 @@
 <h4> Lab Results Table </h4>
     <table class="table">
         <tr class="table__header">
-            {% for header in labs_headings %}
-            <th class="table__cell">{{ header }}</th>
+            {% for key in lab_data[0].keys() %}
+            <th class="table__cell">{{ key }}</th>
             {% endfor %}
         </tr>
-            {% for row in labs_data %}
+        <tbody>
+            {% for lab in labs_data %}
             <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{ cell }}</td>
+                {% for key in lab.keys() %}
+                <td class="table__cell">{{ lab[key] }}</td>
                 {% endfor %}      
+                <td><button type="submit" name="edit" >Edit</button></td>
+                <td><button type="submit" name="delete">Delete</button></td>
             </tr>
             {% endfor %}
+        </tbody>
     </table>
     <hr>
     <h4> Add New Lab Result </h4>
