--- a/Step IV “/templates/patients_foods.html
+++ b/Step IV “/templates/patients_foods.html
@@ -4,49 +4,55 @@
 {% block content%}
 
 <h4> Patients Food Table </h4>
-    <table class="table">
+<table class="table">
+    <thead>
         <tr class="table__header">
-            {% for header in patients_foods_headings %}
-            <th class="table__cell">{{ header }}</th>
+            {% for key in patient_foods[0].keys() %}
+            <th class="table__cell">{{ key }}</th>
             {% endfor %}
         </tr>
-            {% for row in patients_foods_data %}
-            <tr class="table__row">
-                {% for cell in row %}
-                <td class="table__cell">{{ cell }}</td>
-                {% endfor %}     
-            </tr>
-            {% endfor %}
-    </table>
-    <hr>
-    <h4> Add New Patients Food </h4>
-    <div class="col-lg-7 offset-lg-2 my-5">
-        <form>
-            <div class="form-group">
-                <label>Patient ID</label>
-                <input class="form-control" type="text" name="patient_id">
-                <label>Last Name</label>
-                <input class="form-control" type="text" name="last_name">
-                <label>First Name</label>
-                <input class="form-control" type="text" name="first_name">
-                <label>Food Name</label>
-                <input class="form-control" type="text" name="food_name">
-                <label>Patient Food Time</label>
-                <input class="form-control" type="text" name="patient_food_time">
-            </div>
-            <hr>
-            <input class="btn-primary form-control" type="submit" value="Submit">
-        </form>
-    </div>
-    <hr>
-    <h4> Delete Patients Food </h4>
-    <div class="col-lg-7 offset-lg-2 my-5">
-        <form>
-            <div class="form-group">
-                <label>Patient ID</label>
-                <input class="form-control" type="text" name="patient_id">
-            <hr>
-            <input class="btn-danger form-control" type="submit" value="Delete">
-        </form>
-    </div>   
+    </thead>
+    <tbody>
+        {% for patient_food in patients_foods %}
+        <tr class="table__row">
+            {% for key in patient_food.keys() %}
+            <td class="table__cell">{{ patient_food[key] }}</td>
+            {% endfor %}     
+            <td><button type="submit" name="edit" >Edit</button></td>
+            <td><button type="submit" name="delete">Delete</button></td>  
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<hr>
+<h4> Add New Patients Food </h4>
+<div class="col-lg-7 offset-lg-2 my-5">
+    <form>
+        <div class="form-group">
+            <label>Patient ID</label>
+            <input class="form-control" type="text" name="patient_id">
+            <label>Last Name</label>
+            <input class="form-control" type="text" name="last_name">
+            <label>First Name</label>
+            <input class="form-control" type="text" name="first_name">
+            <label>Food Name</label>
+            <input class="form-control" type="text" name="food_name">
+            <label>Patient Food Time</label>
+            <input class="form-control" type="text" name="patient_food_time">
+        </div>
+        <hr>
+        <input class="btn-primary form-control" type="submit" value="Submit">
+    </form>
+</div>
+<hr>
+<h4> Delete Patients Food </h4>
+<div class="col-lg-7 offset-lg-2 my-5">
+    <form>
+        <div class="form-group">
+            <label>Patient ID</label>
+            <input class="form-control" type="text" name="patient_id">
+        <hr>
+        <input class="btn-danger form-control" type="submit" value="Delete">
+    </form>
+</div>   
 {% endblock %}
