--- a/Step III/templates/patients_foods.html
+++ b/Step III/templates/patients_foods.html
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for patient_food in patients_foods %}
+        {% for patient_food in patient_foods %}
         <tr class="table__row">
             {% for key in patient_food.keys() %}
             <td class="table__cell">{{ patient_food[key] }}</td>
