--- a/step V/templates/patients.html
+++ b/step V/templates/patients.html
@@ -13,7 +13,7 @@ content%}
     <td class="table__cell">{{person[key]}}</td>
     {% endfor %}
     <td>
-      <a href="edit_patient/{{person.patient_id}}" class="btn btn-secondary"
+      <a href="update_patient/{{person.patient_id}}" class="btn btn-secondary"
         >Edit</a
       >
     </td>
