--- a/step V/templates/update_patient.html
+++ b/step V/templates/update_patient.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %} {% block title %} Edit Patient {% endblock %} {% block
-content%}
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %} Edit Patient {% endblock %}
+{% block content%}
 
 <h4>Edit Patient</h4>
 
@@ -7,22 +9,22 @@ content%}
   <div class="col-lg-7 offset-lg-2 my-5">
     <form method="POST" action="/update_patient/{{patient_id}}">
       <div class="form-group">
-        {{ form.lname.label }} {{ form.lname(class="form-control") }}
+        {{ form.lname.label }} : {{ form.lname(class="form-control") }}
       </div>
       <div class="form-group">
-        {{ form.fname.label }} {{ form.fname(class="form-control") }}
+        {{ form.fname.label }} : {{ form.fname(class="form-control") }}
       </div>
       <div class="form-group">
-        {{ form.age.label }} {{ form.age(class="form-control") }}
+        {{ form.age.label }} : {{ form.age(class="form-control") }}
       </div>
       <div class="form-group">
-        {{ form.gender.label }} {{ form.gender(class="form-control") }}
+        {{ form.gender.label }} : {{ form.gender(class="form-control") }}
       </div>
       <div class="form-group">
-        {{ form.height.label }} {{ form.height(class="form-control") }}
+        {{ form.height.label }} : {{ form.height(class="form-control") }}
       </div>
       <div class="form-group">
-        {{ form.weight.label }} {{form.weight(class="form-control") }}
+        {{ form.weight.label }} : {{form.weight(class="form-control") }}
       </div>
       <br />
       {{ form.submit(class="btn btn-primary form-control") }}
@@ -30,6 +32,6 @@ content%}
   </div>
 </div>
 
-{% endblock %} {% endblock %}
+{% endblock %} 
 <!-- Code Citation https://github.com/osu-cs340-ecampus/flask-starter-app, 
   https://app.pluralsight.com/library/courses/structuring-growing-flask-application/table-of-contents -->
