patients_food insert now working, foods update working

--- a/step V/templates/delete_patient.html
+++ b/step V/templates/delete_patient.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block title %} Delete Patient {% endblock %} {%
+{% extends 'base.html' %} 
+{% block title %} Delete Patient {% endblock %} {%
 block content%}
 
 <h1>Remove Patient</h1>
