fixed data definition queries to properly refer to a primary key for patients_food, altered lab results read to pull info from patients and dialysis_forms, added edit to lab_results, working edit for dialysis_type

--- a/step V/templates/lab_results.html
+++ b/step V/templates/lab_results.html
@@ -15,7 +15,7 @@
         {% for key in lab.keys() %}
         <td class="table__cell">{{lab[key]}}</td>
         {% endfor %}
-        <td><a href="" class="btn btn-secondary">Edit</a></td>
+        <td><a href="update_lab_results/{{ lab.lab_id }}" class="btn btn-secondary">Edit</a></td>
         <td><a href="delete_labs/{{ lab.lab_id }}" class="btn btn-danger">Delete</a></td>
         </tr>
         {% endfor %}
