update dialysis_type working

--- a/step V/templates/dialysis_forms.html
+++ b/step V/templates/dialysis_forms.html
@@ -15,7 +15,7 @@ block content%}
     <td class="table__cell">{{dialysis_type[key]}}</td>
     {% endfor %}
     <td>
-      <a href="" class="btn btn-secondary">Edit</a>
+      <a href="update_dialysis_type/{{ dialysis_type.dialysis_id }}" class="btn btn-secondary">Edit</a>
     </td>
     <td>
       <a
