--- a/step V/templates/patients_foods.html
+++ b/step V/templates/patients_foods.html
@@ -16,10 +16,10 @@
     <td class="table__cell">{{ patient_food[key] }}</td>
     {% endfor %}
     <td>
-      <a href="" class="btn btn-secondary">Edit</a>
+      <a href="update_patients_food/{{patient_food.id}}" class="btn btn-secondary">Edit</a>
     </td>
     <td>
-      <a href="delete_patients_food/{{patient_food.patient_id}}/{{patient_food.food_id}}" class="btn btn-danger"
+      <a href="delete_patients_food/{{patient_food.id}}" class="btn btn-danger"
         >Delete</a
       >
     </td>
@@ -27,7 +27,7 @@
   {% endfor %}
 </table>
 
-<h4>WIP - Add New Food</h4>
+<h4>Add New Food</h4>
 <div class="row">
   <div class="col-lg-7 offset-lg-2 my-5">
     <form method="POST" action="/patients_foods">
