--- a/step V/templates/patients.html
+++ b/step V/templates/patients.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %} {% block title %} Patients {% endblock %} {% block
 content%}
+<form>
+  <input type="search" placeholder="search" name="q">
+  <button type="submit">Search</button>
+</form>
 <h4>Patients Table</h4>
 <table class="table">
   <tr class="table__header">
