added basic error handling to each table page if query returns no data, fixed aesthetic copy/paste error in delete_patient_foods

--- a/step V/templates/delete_patient_foods.html
+++ b/step V/templates/delete_patient_foods.html
@@ -4,7 +4,7 @@ block content%}
 
 <h1>Remove Patient Foods</h1>
 
-<h2>Are you sure you want to remove Patient Food ?</h2>
+<h2>Are you sure you want to remove Patient Food {{ patients_food_id }}?</h2>
 
 <form method="POST">
   <button type="submit" class="btn btn-danger">Yes</button>
