--- a/step V/templates/lab_results.html
+++ b/step V/templates/lab_results.html
@@ -2,7 +2,7 @@
 {% block title %} Lab Results {% endblock %}
 
 {% block content %}
-
+{% if lab_data[0] is defined %}
 <h4>Lab Results</h4>
     <table class="table">
         <tr class="table__header">
@@ -20,6 +20,9 @@
         </tr>
         {% endfor %}
     </table>
+{% else %}
+<div>No data found :(</div>
+{% endif %}
 </div>
 <hr>
 
