moved search bar to nav bar

--- a/step V/templates/base.html
+++ b/step V/templates/base.html
@@ -54,6 +54,10 @@
             <a class="nav-link" href="{{ url_for('patients_foods_view') }}"
               >Patients Foods</a
             >
+            <form>
+              <input type="search" placeholder="search" name="q">
+              <button type="submit">Search</button>
+            </form>
           </div>
         </div>
       </div>
