--- a/step V/templates/base.html
+++ b/step V/templates/base.html
@@ -20,6 +20,7 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    {% block nav %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('home') }}"
@@ -54,7 +55,7 @@
             <a class="nav-link" href="{{ url_for('patients_foods_view') }}"
               >Patients Foods</a
             >
-            <form>
+            <form id = 'Search'>
               <input type="search" placeholder="search" name="q">
               <button type="submit">Search</button>
             </form>
@@ -62,6 +63,7 @@
         </div>
       </div>
     </nav>
+    {% endblock %}
     <div class="container">
       {% block content %}{% endblock %}
       <script
