corrected delete dialysis form typo added comments to the data definition SQL file added comments and updated for patients_foods in the data manipulation file deleted db_connector file, as that is no longer in use Added units to the lab_results and food entries and added comments throughout tracker.py

--- a/step V/templates/delete_dialysis_form.html
+++ b/step V/templates/delete_dialysis_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %} Delete Patient {% endblock %} {%
 block content%}
 
-<h1>Remove Food</h1>
+<h1>Remove Dialysis Type</h1>
 
 <h2>Are you sure you want to remove Dialysis ID: {{ dialysis_id }} ?</h2>
 
